syntax = "proto3" ;
package block ;

option go_package = "github.com/adithyabhatkajake/libe2c/chain" ;

import "e2c/msg/command.proto" ;

message BlockData {
    // Index of the block
    uint64 Index = 1 ;
    // Hash Pointer
    bytes PrevHash = 2 ;
    // commands
    repeated msg.Command Cmds = 3 ;
}

message Block {
    BlockData Data = 1 ;
    // Block hash
    bytes BlockHash = 2 ;
    // Decision: Has it been accepted yet?
    bool Decision = 3 ;
    // Proposer 
    uint64 Proposer = 4 ;
}