syntax = "proto3" ;
package msg ;

option go_package = "github.com/adithyabhatkajake/libe2c/msg/synchs" ;

import "synchs/msg/proposal.proto" ;
import "synchs/msg/blame.proto" ;
import "synchs/msg/clientAck.proto" ;
import "chain/command.proto" ;

message SyncHSMsg {
    oneof Msg {
        msg.Proposal Prop = 1 ;
        msg.NoProgressBlame Npblame = 2 ;
        msg.EquivocationBlame Eqblame = 3 ;
        msg.CommitAck Ack = 4 ;
        chain.Command Cmd = 5 ;
        msg.QuitView QV = 6 ;
    }
}